--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-spring/web": "^9.7.5",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/oxide-darwin-x64": "^4.1.3",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
