--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "openai": "^4.103.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.1.0",
@@ -33,6 +34,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20.17.30",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@types/three": "^0.175.0",
